--- a/src/css/Inicio.css
+++ b/src/css/Inicio.css
@@ -38,6 +38,7 @@
     justify-content: space-between;
     border-left: 2px solid #1565C0;
 }
+
 .boxTurma {
     margin: auto;
     border-radius: 4px;
@@ -48,6 +49,18 @@
     display: grid;
     gap: 8px;
 }
+
+.boxTurmaAdd {
+    margin: auto;
+    border-radius: 4px;
+    padding: 20px;
+    box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
+    text-align: left;
+    display: flex;
+    border-left: 2px solid #1565C0;
+    height: 40px;
+}
+
 .infosBoxRedacao {
     display: grid;
     gap: 10px;
