--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -4,4 +4,25 @@
     padding: 0px 20px;
     justify-content: end;
     align-items: center;
+    justify-content: space-between;
+    background-color: white;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    padding: 0px 20px;
+    justify-content: end;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
 }
