--- a/src/css/Cadastros.css
+++ b/src/css/Cadastros.css
@@ -1,24 +1,23 @@
+.boxList{
+    border-radius: 10px;
+    margin: auto;
+    background-color: white;
+}
 .boxCadastro{
     padding: 20px;
-    width: 90%;
     margin: auto;
     border-radius: 4px;
-    min-height: 100px;
-    display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
     box-shadow: rgba(0, 0, 0, 0.03) 0px 3px 50px;
 }
 .tituloBoxCadastro {
     padding: 10px 20px;
-    width: 90%;
-    margin: auto;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    background-color: #1565c0;
-    font-size: 24px;
+    font-size: 20px;
+    display: flex;
+    justify-content: space-between;
+    font-weight: 600;
+}
+.css-17vbkzs-MuiFormControl-root-MuiTextField-root, .css-1iledgx-MuiFormControl-root {
+    margin-top: 0px !important;
 }
