--- a/src/css/Inicio.css
+++ b/src/css/Inicio.css
@@ -1,64 +1,63 @@
+.principal {
+    padding: 12px;
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: 2;
+    grid-auto-columns: minmax(0, 1fr);
+}
+
 .container {
     padding: 12px;
 }
 
-.boxLista {
-    padding: 20px;
-    width: 90%;
+.list {
+    border-radius: 10px;
     margin: auto;
-    border-radius: 4px;
-    min-height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    overflow: auto;
     background-color: white;
+    box-shadow: 5px 5px 10px lightgray;
+}
+
+.boxList {
+    border-radius: 4px;
+    padding: 24px;
+    max-height: 70vh;
+    min-height: 100px;
     box-shadow: rgba(0, 0, 0, 0.03) 0px 3px 50px;
 }
 
-.tituloBoxLista {
-    padding: 10px 20px;
-    width: 90%;
-    margin: auto;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    background-color: #1565c0;
-    font-size: 24px;
-}
-
-.boxRedacao {
-    margin: auto;
-    border-radius: 4px;
-    padding: 20px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    text-align: left;
+.tituloBox {
+    padding: 24px;
+    font-size: 20px;
     display: flex;
     justify-content: space-between;
-    border-left: 2px solid #1565C0;
+    font-weight: bold;
 }
 
 .boxTurma {
-    margin: auto;
     border-radius: 4px;
-    padding: 20px;
+    position: relative;
+    padding: 24px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     text-align: left;
-    border-left: 2px solid #1565C0;
-    display: grid;
-    gap: 8px;
+    margin-bottom: 24px;
 }
 
-.boxTurmaAdd {
-    margin: auto;
-    border-radius: 4px;
-    padding: 20px;
-    box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
-    text-align: left;
+.editTurma {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+}
+
+.boxTurma:hover .editTurma {
     display: flex;
-    border-left: 2px solid #1565C0;
-    height: 40px;
+    z-index: 10;
+    background-color: rgba(233, 233, 233, 0.61);
+    backdrop-filter: blur(3px);
 }
 
 .infosBoxRedacao {
