--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -5,24 +5,18 @@
     justify-content: end;
     align-items: center;
     justify-content: space-between;
+    border-radius: 15px;
+    margin: 12px 0px;
     background-color: white;
-}
-
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    display: flex;
-    padding: 0px 20px;
-    justify-content: end;
-    align-items: center;
-    justify-content: space-between;
-    background-color: white;
+    font-size: 15px;
+    color: rgb(88, 88, 88);
 }
 
 a {
     color: inherit;
     text-decoration: none;
+}
+
+.imgLogo{
+    width: 40px;
 }
