--- a/src/css/Cadastros.css
+++ b/src/css/Cadastros.css
@@ -1,9 +1,10 @@
-.boxList{
+.boxList {
     border-radius: 10px;
     margin: auto;
     background-color: white;
 }
-.boxCadastro{
+
+.boxCadastro {
     padding: 20px;
     margin: auto;
     border-radius: 4px;
@@ -11,6 +12,7 @@
     align-items: center;
     box-shadow: rgba(0, 0, 0, 0.03) 0px 3px 50px;
 }
+
 .tituloBoxCadastro {
     padding: 10px 20px;
     font-size: 20px;
@@ -18,6 +20,8 @@
     justify-content: space-between;
     font-weight: 600;
 }
-.css-17vbkzs-MuiFormControl-root-MuiTextField-root, .css-1iledgx-MuiFormControl-root {
+
+.css-17vbkzs-MuiFormControl-root-MuiTextField-root,
+.css-1iledgx-MuiFormControl-root {
     margin-top: 0px !important;
 }
