--- a/src/css/Inicio.css
+++ b/src/css/Inicio.css
@@ -41,27 +41,14 @@
 .boxTurma {
     border-radius: 4px;
     position: relative;
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: 2;
+    grid-auto-columns: minmax(0, 1fr);
     padding: 24px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     text-align: left;
     margin-bottom: 24px;
-}
-
-.editTurma {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-}
-
-.boxTurma:hover .editTurma {
-    display: flex;
-    z-index: 10;
-    background-color: rgba(233, 233, 233, 0.61);
-    backdrop-filter: blur(3px);
 }
 
 .infosBoxRedacaoProf {
@@ -104,3 +91,13 @@
     height: auto;
     background-color: white;
 }
+
+@media only screen and (max-width: 1000px) {
+    .principalProf {
+        padding: 12px;
+        display: grid;
+        grid-auto-flow: row;
+        grid-template-columns: 2;
+        grid-auto-columns: minmax(0, 1fr);
+    }
+  }
