--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -7,37 +7,53 @@
 }
 
 .cardLogin {
-    border-radius: 6px;
+    border-radius: 10px;
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: minmax(0, 1fr);
+    background-color: white;
     width: 60%;
+    height: 80vh;
+    padding: 10px;
     align-items: center;box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 
 }
 
 .cardLeftLogin {
-    background-image: url(../images/student.png);
+    height: 100%;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.studentDiv{
+    background-image: url(../images/loginImage.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    padding: 10px;
     height: 100%;
-    padding: 30px;
 
 }
 
 .cardRightLogin {
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
     height: 100%;
-    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 30px;
+}
+.login{
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
     align-items: center;
-    padding: 30px;
-    gap: 50px;
+    gap: 40px;
 }
-
 
 .loginInputs{
     width: 80%;
@@ -51,7 +67,7 @@
 
 @media only screen and (max-width: 1200px) {
     .cardLogin {
-        width: 80%;
+        width: 60%;
     }
 
     .cardLeftLogin {
