--- a/src/css/Sobre.css
+++ b/src/css/Sobre.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 300px;
     border-radius: 10px;
-    background-image: url("../images/estudante.jpg");
+    /* background-image: url("../images/estudante.jpg"); */
     background-size: cover;
     background-position: bottom center;
 }
