--- a/src/css/Inicio.css
+++ b/src/css/Inicio.css
@@ -1,13 +1,15 @@
 .principalProf {
-    padding: 12px;
+    display: grid;
+    grid-auto-flow: row;
+    grid-template-rows: 2;
+    grid-auto-rows: minmax(0, 2fr);
+}
+
+.boxesProf {
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: 2;
     grid-auto-columns: minmax(0, 1fr);
-}
-
-.principalAluno {
-    padding: 0px;
 }
 
 .container {
@@ -19,7 +21,8 @@
     margin: auto;
     overflow: auto;
     background-color: white;
-    box-shadow: 5px 5px 10px lightgray;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    height: 100%;
 }
 
 .boxList {
@@ -42,13 +45,14 @@
     border-radius: 4px;
     position: relative;
     display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: 2;
-    grid-auto-columns: minmax(0, 1fr);
+    grid-auto-flow: row;
+    grid-template-rows: 2;
+    grid-auto-rows: minmax(0, 1fr);
     padding: 24px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     text-align: left;
     margin-bottom: 24px;
+    height: 100%;
 }
 
 
@@ -62,22 +66,20 @@
 
 .boxRedacaoProf {
     display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: minmax(0, 1fr);
-    padding: 10px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    grid-auto-flow: row;
+    padding: 20px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     align-items: center;
+
 }
 
 .boxRedacaoAluno {
     display: flex;
-    gap: 50px;
     padding: 15px;
     justify-content: space-between;
     border-radius: 4px;
-    margin: auto;
-    width: 95%;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    align-items: center;
 }
 
 .infosBoxRedacaoAluno {
@@ -111,12 +113,23 @@
     flex-direction: column;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 800px) {
     .principalProf {
         padding: 12px;
         display: grid;
         grid-auto-flow: row;
         grid-template-columns: 2;
         grid-auto-columns: minmax(0, 1fr);
+    }
+
+    .boxesProf {
+        display: grid;
+        grid-auto-flow: row;
+        grid-template-columns: 2;
+        grid-auto-columns: minmax(0, 1fr);
+    }
+
+    .container {
+        min-width: 100% !important;
     }
 }
