--- a/src/utils/TipTap/style.css
+++ b/src/utils/TipTap/style.css
@@ -1,6 +1,7 @@
 
 .editor-menu {
   margin-bottom: 10px;
+  text-align: start;
 }
 
 .editor-menu button {
@@ -15,7 +16,7 @@
 }
 
 .ProseMirror {
-  border: 1px solid rgba(0, 0, 0, 0.23);
+  border: 1px solid rgba(0, 0, 0, 0.23) !important;
   border-radius: 5px;
   padding: 10px;
   min-height: 150px;
@@ -28,4 +29,9 @@
   float: left;
   height: 0;
   pointer-events: none;
+}
+
+p:hover {
+  text-decoration: none !important;
+  cursor: default !important;
 }
