Ajustes para visualizção de correção e correção de redação

--- a/src/utils/TipTap/style.css
+++ b/src/utils/TipTap/style.css
@@ -1,4 +1,4 @@
-
+/* 
 .editor-menu {
   margin-bottom: 10px;
   text-align: start;
@@ -34,4 +34,4 @@
 p:hover {
   text-decoration: none !important;
   cursor: default !important;
-}
+} */
